--- a/en/index.html
+++ b/en/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="On 9-10 June, Tech Park will host the Data Visualization Hackathon - Back to the Future: 1918. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data will work together to visualise the historic data of the past 100 years and bring history to life. This is the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products."/>
-    <meta name="description" content="On 9-10 June, Tech Park will host the Data Visualization Hackathon - Back to the Future: 1918. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data will work together to visualise the historic data of the past 100 years and bring history to life. This is the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products.">
+    <meta property="og:description" content="On 9-10 June, Tech Park hosted the Data Visualization Hackathon - Back to the Future: 1918. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data worked together to visualise the historic data of the past 100 years and bring history to life. This was the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products."/>
+    <meta name="description" content="On 9-10 June, Tech Park hosted the Data Visualization Hackathon - Back to the Future: 1918. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data worked together to visualise the historic data of the past 100 years and bring history to life. This was the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products.">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/en/" />
     <meta property="og:site_name" content="VizHack" />
@@ -44,17 +44,13 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  On <b>9-10 June</b>, Tech Park will host the Data Visualization Hackathon - <b>Back to the Future: 1918</b>. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data will work together to visualise the historic data of the past 100 years and bring history to life.
+                  On <b>9-10 June</b>, Tech Park hosted the Data Visualization Hackathon - <b>Back to the Future: 1918</b>. Designers, developers, communication specialists, history researchers, journalists and people who are interested in the data worked together to visualise the historic data of the past 100 years and bring history to life.
                 </p>
                 <p>
-                  This is the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products.
+                  This was the second edition of the Data Visualization Hackathon, which enables participants to create different kinds of digital tools, increase their knowledge in the field of data communication, get acquainted with modern technologies, meet people who are also interested in these topics and work with experienced mentors to develop your products.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="data gradient hidden shift" data-id="7">DATA</a>
-              <div class="register hidden shift" data-id="8">
-                <label>The deadline to register your team is June 1st</label>
-                <a href="https://goo.gl/forms/qBVZUw6CJ8oss6PJ3">Register</a>
-              </div>
+              <a href="https://geohistory.ge/" target="_blank" class="data gradient hidden shift" data-id="7">WINNING PROJECT</a>
             </div>
           </div>
           <div class="hline" data-id="9"></div>
