--- a/ka/index.html
+++ b/ka/index.html
@@ -7,8 +7,8 @@
     <title>VizHack</title>
 
     <meta property="og:title" content="VizHack">
-    <meta property="og:description" content="9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ. მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო."/>
-    <meta name="description" content="9-10 ივნისს ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - უკან მომავალში: 1918-ს მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ. მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.">
+    <meta property="og:description" content="9-10 ივნისს ტექნოპარკში მონაცემთა ვიზუალიზაციის ჰაკათონი - უკან მომავალში: 1918 - გაიმართა. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და ჟურნალისტები შეიკრიბნენ. მათ გასული 100 წლის ისტორიულ მონაცემების გამოყენებით ინოვაციური პროექტები შექმნეს. მონაცემთა ვიზუალიზაციის ჰაკათონი მეორედ გაიმართა. ღონისძიება მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო."/>
+    <meta name="description" content="9-10 ივნისს ტექნოპარკში მონაცემთა ვიზუალიზაციის ჰაკათონი - უკან მომავალში: 1918 - გაიმართა. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და ჟურნალისტები შეიკრიბნენ. მათ გასული 100 წლის ისტორიულ მონაცემების გამოყენებით ინოვაციური პროექტები შექმნეს. მონაცემთა ვიზუალიზაციის ჰაკათონი მეორედ გაიმართა. ღონისძიება მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vizhack.ge/ka/" />
     <meta property="og:site_name" content="VizHack" />
@@ -44,17 +44,13 @@
             <div class="flex">
               <section class="hidden shift" data-id="6">
                 <p>
-                  <b>9-10 ივნისს</b> ტექნოპარკი მონაცემთა ვიზუალიზაციის ჰაკათონს - <b>უკან მომავალში: 1918-ს</b> მასპინძლობს. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და  ჟურნალისტები შეიკრიბებიან. ისინი გასული 100 წლის ისტორიულ მონაცემების გამოყენებითისტორიას გააცოცხლებენ.
+                  <b>9-10 ივნისს</b> ტექნოპარკში მონაცემთა ვიზუალიზაციის ჰაკათონი - <b>უკან მომავალში: 1918</b> - გაიმართა. ჰაკათონის ფარგლებში, მონაცემებით დაინტერესებული ადამიანები, დიზაინერები, პროგრამისტები, კომუნიკაციის სპეციალისტები, ისტორიის მკვლევრები და ჟურნალისტები შეიკრიბნენ. მათ გასული 100 წლის ისტორიულ მონაცემების გამოყენებით ინოვაციური პროექტები შექმნეს.
                 </p>
                 <p>
-                  მონაცემთა ვიზუალიზაციის ჰაკათონი წელს უკვე მეორედ ტარდება და მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
+                  მონაცემთა ვიზუალიზაციის ჰაკათონი მეორედ გაიმართა. ღონისძიება მონაწილეებს საშუალებას აძლევს, გაიღრმავონ ცოდნა მონაცემების სფეროში, გაეცნონ თანამედროვე ტექნოლოგიებს, შეხვდნენ ამ თემებით დაინტერესებულ სხვა ადამიანებს და გამოცდილი მენტორების დახმარებით, თავად შექმნან სხვადასხვა სახის ციფრული ხელსაწყო.
                 </p>
               </section>
-              <a href="https://www.google.com/url?q=https://drive.google.com/drive/folders/1TxPvxV7qa4v04OYnXs3NebIX8ThoMrwR?usp%3Dsharing&sa=D&source=hangouts&ust=1527057368667000&usg=AFQjCNGHYIUo3rGzTy37EV_RUqjVSMGifw" class="data gradient hidden shift" data-id="7">მონაცემები</a>
-              <div class="register hidden shift" data-id="8">
-                <label>დაარეგისტრირეთ გუნდი 1 ივნისამდე</label>
-                <a href="https://goo.gl/forms/qBVZUw6CJ8oss6PJ3">რეგისტრაცია</a>
-              </div>
+              <a href="https://geohistory.ge/" target="_blank" class="data gradient hidden shift" data-id="7">გამარჯვებული პროექტი</a>
             </div>
           </div>
           <div class="hline" data-id="9"></div>
